# sagittal_average

./: .gitignore  CITATION.md  README.md  pyproject.toml  test_sagittal_brain.py  try1111.py
.github/workflows/: docs2gh.yml  pytest.yml
docs/: conf.py  index.rst  sagittal_average.rst
docs/how_to/: index.rst  installation.rst
sagittal_average/: command.py  sagittal_brain.py
tests/: test_call_command.py  test_sagittal_brain.py
tests/fixtures/: brain_sample.csv
