[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagittal_average"
description = "Calculate the averages through a sagittal plane easily."
version = "0.1.0"

readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
license-expression = 'BSD-3-clause'
authors = [
  {name = "Charlene Bultoc", email = "c.bultoc@neurolab.ac.uk"},
  {name = "ARC Team", email = "ARC.Education@ucl.ac.uk"},
]
maintainers = [
  {name = "ARC Team", email = "ARC.Education@ucl.ac.uk"},
]
classifiers = [
  # Check the whole list at: https://pypi.org/classifiers/
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: BSD License",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.13",

  # To avoid uploading it to PiPy
  "Private :: Do Not Upload",
]

dependencies = [
    "numpy",
]

[project.scripts]
sagittal_average_run = "sagittal_average.command:process"

[tool.hatch.build.targets.wheel]
packages = [
  "./sagittal_average",  # 这里一定要按照toml与包的相对路径调整，指向包的位置
]

[project.urls]
Documentation = "https://JessieLu20.github.io/sagittal_average/"
Repository = "https://github.com/JessieLu20/sagittal_average.git"
Issues = "https://github.com/JessieLu20/sagittal_average/issues"